added tonejs as a local file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Experimenting</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.4.9/Tone.js"></script>
+    <script src="tone.js"></script>
     <script>
             function playC (time = '0') {
                 var synth = new Tone.Synth().toMaster();
