added a shortcut icon/favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <script src="tone.js"></script>
     <script src="index.js" lang="js"></script>
+    <link rel="shortcut icon" href="files/favicon.PNG">
 </head>
 <body>
     <div id = "container">
